<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".presentation.ui.home.detail.DetailBookActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:id="@+id/scroll_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_gambar_detail_buku"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/buku_geez1" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/main_color"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_gambar_detail_buku"
                tools:text="Geez and Ann #1" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/font_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detail"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetti\nindustry. Lorem Ipsum has been the industry's standard dum\ntext ever since the 1500s, when an unknown printer took a galley" />

            <TextView
                android:id="@+id/tv_detail_teks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/detail"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/author"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_teks" />

            <TextView
                android:id="@+id/tv_value_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_teks"
                tools:text="Value" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/publisher"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_value_author" />

            <TextView
                android:id="@+id/tv_value_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_value_author"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                tools:text="Value" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value_publisher"                     android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/book_category"
                    android:textColor="@color/main_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_value_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/main_color"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value_publisher"
                    android:textSize="14sp"
                    tools:text="Value" />


                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value_category"                     android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/language"
                    android:textColor="@color/main_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_value_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value_category"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/main_color"
                    android:textSize="14sp"
                    tools:text="Value" />


                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value_language"                     android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/number_of_pages"
                    android:textColor="@color/main_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_value_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_value_language"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/main_color"
                    android:textSize="14sp"
                    tools:text="Value" />


            <Button
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_btn_primary"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/tv_value_pages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>